vlib/v/parser/tests/type_alias_existing_type_err.out
vlib/v/parser/tests/type_alias_existing_type_err.vv:3:1: error: cannot register alias `Foo`, another type with this name exists
    1 | struct Foo{}
    2 |
    3 | type Foo = Foo
      | ~~~~~~~~~~~~~~
    4 |
    5 | fn main() {
