vlib/v/parser/tests/type_alias_existing_type_err.vv
struct Foo{}

type Foo = Foo

fn main() {
    
}
